--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
+    "components": "^0.1.0",
     "firebase": "^8.1.1",
     "lodash.memoize": "^4.1.2",
+    "mdbreact": "^5.0.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -18,6 +20,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "reselect": "^4.0.0",
+    "styled": "^1.0.0",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
